corrections version mobile

--- a/css/accueil.css
+++ b/css/accueil.css
@@ -18,10 +18,6 @@ body h1 {
     font-family: 'Shrikhand', cursive;
 }
 
-body h2 {
-    margin-left: 5%;
-}
-
 /*variables*/
 
 :root {
@@ -261,6 +257,10 @@ aside {
     margin-bottom: 15%;
 }
 
+aside h2 {
+    margin-left: 5%;
+}
+
 .aside__box {
     display: flex;
     align-items: center;
@@ -335,6 +335,7 @@ section h2 {
     align-self: start;
     margin-top: 14%;
     margin-bottom: 6%;
+    margin-left: 5%;
 }
 
 .restaurant__box {
